--- a/style.css
+++ b/style.css
@@ -94,6 +94,16 @@ h1 {
     font-size: 1rem;
 }
 
+footer {
+    width: 100%;
+    text-align: center;
+    padding: 0.5rem 0;
+    background-color: #e6e4e4;
+    position: fixed;    
+    bottom: 0;
+    right: 0;
+}
+
 @media screen and (max-width: 768px) {
     #searchForm input {
         max-width: 300px;
